# ChangeLog for net-im/psi-contentdownloader
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  12 Dec 2010; Nikoli <nikoli@lavabit.com>
  +psi-contentdownloader-0.1.9_pre3332.ebuild:
  version bump

  27 Nov 2010; Nikoli <nikoli@lavabit.com>
  +psi-contentdownloader-0.1.7_pre3193.ebuild:
  version bump

  21 Oct 2010; Nikoli <nikoli@lavabit.com>
  +psi-contentdownloader-0.1.6_pre3115.ebuild:
  version bump
