@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  27 Dec 2010; Nikoli <nikoli@lavabit.com>
+  +psi-contentdownloader-0.1.10_pre3436.ebuild:
+  version bump
+
   12 Dec 2010; Nikoli <nikoli@lavabit.com>
   +psi-contentdownloader-0.1.9_pre3332.ebuild:
   version bump
